# time_tracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.ini.example  upadte_translations.bat
src/: Application.cpp  Application.h  main.cpp
src/core/: DatabaseManager.cpp  DatabaseManager.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskSettingsDialog.cpp  TaskSettingsDialog.h  ThemeManager.cpp  ThemeManager.h
src/logging/: logger.cpp  logger.h
src/resources/themes/dark/: dark.qss
src/resources/themes/deep_dark/: deep_dark.json  deep_dark.qss
src/resources/themes/none/: none.json  none.qss
src/resources/themes/synthwave/: synthwave.json  synthwave.qss
src/resources/themes/white/: white.json  white.qss
src/resources/translations/: time_tracker_ru_RU.ts
src/ui/: MainWindow.cpp  MainWindow.h  SideMenu.cpp  SideMenu.h  TimerWindow.cpp  TimerWindow.h
src/ui/components/: DayCard.cpp  DayCard.h  TaskInfo.h
src/ui/pages/: BasePage.cpp  HistoryPage.cpp  HistoryPage.h  ProfilePage.cpp  ProfilePage.h  SettingsPage.cpp  SettingsPage.h  StartPage.cpp  StartPage.h  TaskPage.cpp  TaskPage.h
src/ui/widgets/: PomodoroTimer.cpp  PomodoroTimer.h
tests/: test_db.cpp
